--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,12 +106,11 @@ jobs:
 
           # Create a nice folder for artifacts to upload
           mkdir -p stealth-artifacts
-          cp "$AGENT" stealth-artifacts/
-          cp "$GADGET" stealth-artifacts/
-          cp "$SERVER" stealth-artifacts/
-          cp "$INJECT" stealth-artifacts/
-          cp "$PORTAL" stealth-artifacts/
-
+          [ -f "$AGENT" ] && cp "$AGENT" stealth-artifacts/
+          [ -f "$GADGET" ] && cp "$GADGET" stealth-artifacts/
+          [ -f "$SERVER" ] && cp "$SERVER" stealth-artifacts/
+          [ -f "$INJECT" ] && cp "$INJECT" stealth-artifacts/
+          [ -f "$PORTAL" ] && cp "$PORTAL" stealth-artifacts/
       # 10. Upload Artifacts
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
